# algorithms_with_c

./: CMakeLists.txt  conanfile.py  crie_localmente
